WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46348
Invalid assertion in ScriptCallback
https://bugs.webkit.org/show_bug.cgi?id=46348
Summary
Invalid assertion in ScriptCallback
Luiz Agostini
Reported
2010-09-23 07:28:00 PDT
Invalid assertion in ScriptCallback
Attachments
patch
(1.83 KB, patch)
2010-09-23 07:33 PDT
,
Luiz Agostini
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luiz Agostini
Comment 1
2010-09-23 07:33:32 PDT
Created
attachment 68515
[details]
patch
Andreas Kling
Comment 2
2010-09-23 07:54:05 PDT
Comment on
attachment 68515
[details]
patch LGTM.
WebKit Commit Bot
Comment 3
2010-09-23 08:57:13 PDT
Comment on
attachment 68515
[details]
patch Clearing flags on attachment: 68515 Committed
r68146
: <
http://trac.webkit.org/changeset/68146
>
WebKit Commit Bot
Comment 4
2010-09-23 08:57:17 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2010-09-23 12:11:25 PDT
See <
https://bugs.webkit.org/show_bug.cgi?id=43216#c15
> for the rationale.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug