2010-09-23  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Andreas Kling.

        Invalid assertion in ScriptCallback
        https://bugs.webkit.org/show_bug.cgi?id=46348

        Removing invalid ASSERT from method ScriptCallback::call().

        * bindings/js/ScriptFunctionCall.cpp:
        (WebCore::ScriptCallback::call):

Canonical link: https://commits.webkit.org/58845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68146 268f45cc-cd09-0410-ab3c-d52691b4dbfc